--- a/src/styles.css
+++ b/src/styles.css
@@ -133,7 +133,7 @@ body {
 
 .profile-table .p-datatable-tbody>tr>td {
     border: none !important;
-    border-bottom: 1px solid #E4E4E7 !important;
+    border-bottom: 1px solid #2E2E2E !important;
 }
 
 .dark .profile-table .p-datatable-tbody>tr>td {
